meetings-api.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: meetings-api
  namespace: meetings-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: meetings-api
  template:
    metadata:
      labels:
        app: meetings-api
    spec:
      containers:
        - name: meetings-api
          image: registry.digitalocean.com/zimmermann/meetings-api:0.0.7 #<IMAGE>
          ports:
            - containerPort: 8080
              name: http
