meetings-api.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: meetings-api
  labels:
    app: meetings-api
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app: meetings-api
